$Id: ChangeLog 2008/02/18 18:13:33 mallet $

jrl-interface-giktask version 1.4 released March 26, 2008

	8. Added robot() method in CjrlGikMotionConstraint
	7. Fix virtual inheritance in CjrlGikJoitStateConstraint
	
jrl-interface-giktask version 1.3 released February 18, 2008

	6. Added clone constructor to CjrlGikMotionConstraint
	5. Constraints now have virtual public inheritance from
	   jrlGikJointStateConstraint.
    	4. Added the method computeInfluencingDofs() in jrlGikStateConstraint
	
jrl-interface-giktask version 1.2 released November 8, 2007
	
	3. Added a ComConstraint and updated ObjectConstructor accordingly.
	2. Correction in documentation.

jrl-interface-giktask version 1.1 released August 30, 2007

	1. replace some of CjrlHumanoidDynamicRobot with CjrlDynamicRobot
	to make those interface more general.
	
jrl-interface-giktask version 1.0 released June 15, 2007